# pLAST

./: .gitignore  LICENSE  README.md  core-env.yml  pyproject.toml
.github/workflows/: publish.yml  pypi-publish.yml
docs/: .buildinfo  .buildinfo.bak  alignment.html  data.html  exceptions.html  genindex.html  index.html  model.html  objects.inv  parsers.html  plast.html  py-modindex.html  search.html  searchindex.js  utils.html
docs/.doctrees/: alignment.doctree  data.doctree  environment.pickle  exceptions.doctree  index.doctree  model.doctree  parsers.doctree  plast.doctree  utils.doctree
docs/.doctrees/notebooks/: index.doctree  installation.doctree  usage.doctree
docs/_sources/: index.rst.txt
docs/_sources/notebooks/: installation.ipynb.txt
docs/notebooks/: index.html  installation.html  usage.html  usage.ipynb
notebooks/: installation.ipynb  usage.ipynb
notebooks/examples/: NC_005000.1.fasta  NC_005000.1.gb  NZ_AP018444.1.fasta  NZ_AP018444.1.gb  Tn1548_armA_pCTX_M3.fasta  configuration.py
plast/: alignment.py  data.py  exceptions.py  model.py  parsers.py  plast.py  utils.py
sphinx/: Makefile
sphinx/source/: conf.py  data.rst  index.rst  utils.rst
sphinx/source/notebooks/: installation.ipynb  usage.ipynb
