[project]
name = "pLAST"
version = "1.0.0"
description="Plasmid Language Analysis and Search Tool"
authors=[{name="Kamil Krakowski", email="k.krakowski@uw.edu.pl"},
         {name="Malgorzata Orlowska", email="m.orlowska19@uw.edu.pl"},
         {name="Stanislaw Dunin-Horkawicz", email="s.dunin-horkawicz@uw.edu.pl"}]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["plasmid", "network", "language", "word2vec", "pLAST"]
requires-python = ">=3.9.0,<=3.13"
dependencies = [
    "gensim==4.3.3",
    "numba>=0.61.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "scikit-learn==1.5.2",
]

[project.urls]
"Homepage"="https://lbs.cent.uw.edu.pl/"

[tool.setuptools]
py-modules = ["__init__"]

[tool.setuptools.packages]
find = {}

[project.scripts]
plast-server = "bin.run_webserver:main"
